--- a/Languages/default-fr.xml
+++ b/Languages/default-fr.xml
@@ -28,7 +28,7 @@ Other:
 		description="Shareaza French Skin File"
 		link="http://www.shareaza.com/"
 		email="shareaza.francais(at)laposte.net"
-		version="2.1.0.150"
+		version="2.1.1.3"
 		type="Language"
 		language="fr"
 		prompt="Cliquez ici pour utiliser Shareaza en Français."
@@ -989,7 +989,7 @@ Other:
 	<menu name="CDownloadsWnd.Seeding">
   	    <item id="ID_DOWNLOADS_LAUNCH_COMPLETE" text="_Ouvrir"/>
   	    <item id="ID_DOWNLOADS_TORRENT_INFO" text="_Info Torrent"/>
-  	    <item id="ID_DOWNLOADS_CLEAR_COMPLETE" text="_Stopper l'ensemencement"/>
+  	    <item id="ID_DOWNLOADS_CLEAR_COMPLETE" text="_Stopper le seed"/>
   	</menu>
 	<menu name="CDownloadsWnd.Nothing">
   	    <item id="ID_DOWNLOADS_HELP" text="Ai_de..."/>
@@ -1681,17 +1681,17 @@ Other:
 			</style>
 		</styles>
 		<para align="center">
-			<text id="TorrentsNone" format="b">Pas de torrent en semence</text>
-			<text id="TorrentsOne" format="b">1 torrent en semence</text>
-			<text id="TorrentsMany" format="b">%i torrents en semence</text>
+			<text id="TorrentsNone" format="b">Pas de torrent en seed</text>
+			<text id="TorrentsOne" format="b">1 torrent en seed</text>
+			<text id="TorrentsMany" format="b">%i torrents en seed</text>
 			<newline gap="4"/>
-			<link id="ReseedTorrent" format="bu" target="raza:command:ID_TOOLS_RESEEDTORRENT">Resemer %s</link>
+			<link id="ReseedTorrent" format="bu" target="raza:command:ID_TOOLS_RESEEDTORRENT">Re-seed %s</link>
 			<newline gap="4"/>
   	        <group id="1">
-  	        <link id="SeedTorrent" format="bu" target="raza:command:ID_TOOLS_SEEDTORRENT">Semer un autre torrent</link>
+  	        <link id="SeedTorrent" format="bu" target="raza:command:ID_TOOLS_SEEDTORRENT">Seed d'un autre torrent</link>
   	        </group>
   	        <group id="2">
-			<link id="SeedTorrent" format="bu" target="raza:command:ID_TOOLS_SEEDTORRENT">Semer un torrent</link>
+			<link id="SeedTorrent" format="bu" target="raza:command:ID_TOOLS_SEEDTORRENT">Seed d'un torrent</link>
 			</group>
 		</para>
 
@@ -2259,7 +2259,7 @@ Other:
 	<tip id="ID_LIBRARY_SCAN" message="Parcourir afin de mettre à jour d'éventuels changements dans cette sélection de dossiers ou de fichiers."/>
 	<tip id="ID_LIBRARY_SEARCH" message="Rechercher votre bibliothèque de fichiers..."/>
 	<tip id="ID_LIBRARY_SEARCH_QUICK" message="Rechercher dans votre bibliothèque Shareaza..."/>
-	<tip id="ID_LIBRARY_SEED_TORRENT" message="Semer le Torrent sélectionné sur BitTorrent."/>
+	<tip id="ID_LIBRARY_SEED_TORRENT" message="Seed du Torrent sélectionné sur BitTorrent."/>
 	<tip id="ID_LIBRARY_SELECT_ALL" message="Sélectionner et voir tous les fichiers de votre bibliothèque."/>
 	<tip id="ID_LIBRARY_SHARED_FILE" message="Partager ou retirer du partage cette sélection de fichiers."/>
 	<tip id="ID_LIBRARY_SHARED_FOLDER" message="Partager ou retirer du partage cette sélection de dossiers."/>
@@ -2371,7 +2371,7 @@ Other:
 	<tip id="ID_TOOLS_MERCORA" message="Démarrez la Radio P2P"/>
 	<tip id="ID_TOOLS_PROFILE" message="Modifier votre profil utilisateur..."/>
 	<tip id="ID_TOOLS_RESKIN" message="Recharger et appliquer votre sélection de thème actuelle."/>
-	<tip id="ID_TOOLS_SEEDTORRENT" message="Semer le Torrent sélectionné sur BitTorrent."/>
+	<tip id="ID_TOOLS_SEEDTORRENT" message="Seed du Torrent sélectionné sur BitTorrent."/>
 	<tip id="ID_TOOLS_SETTINGS" message="Configurer les réglages de Shareaza..."/>
 	<tip id="ID_TOOLS_SKIN" message="Choisir un thème différent pour Shareaza..."/>
 	<tip id="ID_TOOLS_WIZARD" message="Ouvre l'assistant de démarrage rapide de Shareaza..."/>
@@ -2862,7 +2862,7 @@ Other:
 	<string id="16803" value="Le dossier que vous souhaitez partager l'est déjà car il est contenu dans un dossier précédemment partagé:\n\n%s"/>
 	<string id="16804" value="Vous n'avez pas encore spécifié votre nom d'utilisateur dans votre profil utilisateur.\n\nC'est une bonne idée de choisir un nom d'utilisateur propre car cela  aux autres utilisateurs de voir à qui ils sont connectés.\n\nÊtes-vous certain de vouloir continuer sans nom d'utilisateur?"/>
 	<string id="16805" value="Vous n'avez pas encore spécifié votre résidence dans votre profil utilisateur.\nC'est une bonne idée d'entrer une résidence car cela permet aux autres utilisateurs de voir où vous résidez.\n\nÊtes-vous certain de vouloir continuer sans entrer de résidence?"/>
-	<string id="16806" value="Vous avez indiqué que vous voulez paramétrer la redirection du port sur votre routeur NAT ou votre pare-feu.\n\nVeillez à configurer votre réseau pour rediriger le port TCP %i vers votre PC local."/>
+	<string id="16806" value="Vous avez indiqué que vous voulez paramétrer la redirection de port sur votre routeur NAT ou votre pare-feu.\n\nVeillez à configurer votre réseau pour rediriger le port TCP et UDP %i vers votre PC local."/>
 	<string id="16807" value="Merci d'entrer la limite de bande passante que vous voulez appliquer sous la forme &quot;123 kb/s&quot; pour kilobits par seconde, ou &quot;123 KB/s&quot; pour kilobytes par seconde."/>
 	<string id="16808" value="Vous n'avez pas encore spécifié votre genre ou votre âge.\n\nÊtes-vous certain de vouloir continuer sans le faire?"/>
 	<string id="16809" value="&amp;Quitter"/>
@@ -3008,7 +3008,7 @@ Other:
 	<string id="17494" value="Ce torrent inclus le fichier &quot;%s&quot;, mais Shareaza ne peut pas trouver ce fichier dans votre bibliothèque.  Si possible, déplacez le fichier dans le même dossier que le torrent et recommencez."/>
 	<string id="17495" value="Ce torrent inclus le fichier &quot;%s&quot; qui devrait être %s, cependant votre version du fichier est %s."/>
 	<string id="17496" value="Erreur durant la copie de &quot;%s&quot; dans un fichier de partage BitTorrent."/>
-	<string id="17497" value="Erreur inconnue en essayant de semer &quot;%s&quot;."/>
+	<string id="17497" value="Erreur inconnue en essayant de seed &quot;%s&quot;."/>
 	<string id="17498" value="Erreur détectée dans le fichier &quot;%s&quot;."/>
 	<string id="18496" value="Vous avez fait des changements dans le champ &quot;nom&quot;.  Êtes-vous certain de vouloir renommer ce téléchargement?"/>
 	<string id="18497" value="Vous avez tapez une valeur SHA1, cependant elle est invalide.  Merci de vérifier et de recommencer."/>
@@ -3042,7 +3042,7 @@ Other:
 	<string id="20109" value="Mis en file d'attente"/>
 	<string id="20110" value="Inconnu"/>
 	<string id="20111" value="Terminé"/>
-	<string id="20112" value="Ensemencement"/>
+	<string id="20112" value="Seed"/>
 	<string id="20113" value="Déplace"/>
 	<string id="20114" value="En pause"/>
 	<string id="20115" value="Erreur de fichier"/>
@@ -3364,7 +3364,7 @@ Other:
 		<control caption="Télécharger..."/>
 	</dialog>
 
-	<dialog name="CBitTorrentSettingsPage" cookie="BuBuBuEdmsStEdmsStBuStEdmsBuBuBuEdBuBuEdBuStEdSt" caption="BitTorrent">
+	<dialog name="CBitTorrentSettingsPage" cookie="BuBuBuEdmsStEdmsStBuEdmsStBuBuBuBuEdBuBuEdBuStEd" caption="BitTorrent">
 	    <control caption="_Interface:"/>
         <control caption="Afficher les éléments d'interface BitTorrent additionnels"/>
         <control caption="Connexions de _Téléchargement:"/>
@@ -3372,9 +3372,9 @@ Other:
         <control caption="Nombre de torrents à la fois"/>
         <control/><control/>
         <control caption="Connexions à des clients"/>
-		<control caption=" Nettoyer les torrents téléch."/>
-  	    <control caption="qd le ratio de partage dépasse "/>
-  	    <control/><control/>
+		<control caption="&#160;Nettoyer les torrents téléch.&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;qd le ratio de partage dépasse"/>
+  	    <control/><control/><control/>
+		<control caption="&#160;Sources torrent de préférence"/>
         <control caption="_EndGame:"/>
         <control caption="Activer le mode Endgame lors de la complétion des torrents"/>
         <control caption="_Stocker les Torrents ici:"/>
@@ -3382,7 +3382,7 @@ Other:
         <control caption="Créateur de _torrent"/>
         <control/><control/>
         <control caption="Traqueur par _défaut:"/>
-        <control/><control/>
+        <control/>
 	</dialog>
 
 	<dialog name="CProtocolsSettingsPage" cookie="BuSy" caption="Protocoles">
@@ -4054,11 +4054,11 @@ Other:
 
 	<dialog name="CTorrentSeedDlg" cookie="StStBuBuBuStms" caption="Ouvrir un fichier Torrent">
 		<control/>
-		<control caption="Vous avez ouvert un fichier Torrent.  Voulez-vous télécharger ses contenus, ou le semer à nouveau?"/>
+		<control caption="Vous avez ouvert un fichier Torrent.  Voulez-vous télécharger ses contenus, ou le mettre en seed de nouveau?"/>
 		<control caption="Télécharger"/>
-		<control caption="Semer"/>
+		<control caption="Seed"/>
 		<control caption="Annuler"/>
-		<control caption="Pour partager des fichiers complets avec BitTorrent il faut les semer.  Une fois ce processus terminé le Torrent apparaitra dans votre liste de téléchargements."/>
+		<control caption="Pour partager des fichiers complets avec BitTorrent il faut les mettre en seed.  Une fois ce processus terminé le Torrent apparaitra dans votre liste de téléchargements."/>
 		<control/>
 	</dialog>
 
