--- a/trunk/Languages/default-fr.xml
+++ b/trunk/Languages/default-fr.xml
@@ -1778,7 +1778,7 @@ Other:
 
 		<link target="raza:page:CUploadsSettingsPage" format="b">Envois:</link>
 		<gap size="4"/>
-		<text>Capacité des envois, mise en file, bannissement, temps morts et requêtes spéciales.</text>
+		<text>Capacité des envois, mise en file, bannissement, temps morts et demandes spéciales.</text>
 		<newline gap="10"/>
 
 		<link target="raza:page:CRemoteSettingsPage" format="b">Accès à distance:</link>
@@ -2066,7 +2066,7 @@ Other:
 		<text format="b">Merci de reformuler votre recherche</text>
 		<newline gap="8"/>
 		<text>Cette recherche est pauvrement formatée, et peut ne pas fonctionner correctement.
-		Les recherches doivent si possible inclure plusieurs termes, spécifier un schéma (type de fichier). En outre, il est préférable de ne pas se limiter à des nombres ou à des seuls termes négatifs, et d'éviter les requêtes excessivements générales.</text>
+		Les recherches doivent si possible inclure plusieurs termes, spécifier un schéma (type de fichier). En outre, il est préférable de ne pas se limiter à des nombres ou à des seuls termes négatifs, et d'éviter les demandes trop générales.</text>
 		<newline gap="8"/>
 		<text>La plupart des clients sur le réseau ignoreront une recherche avec un seul terme, &quot;MP3&quot; par exemple, peut précise, elle génèrerait beaucoup trop de résultats.</text>
 	</document>
@@ -2511,13 +2511,13 @@ Other:
 	<string id="8152" value="%lu hubs, %lu leaves"/>
 	<string id="8153" value="Ne recherche pas actuellement"/>
 	<string id="8154" value="Aucun fichier trouvé"/>
-	<string id="8155" value="%lu fichiers en %lu requêtes|%lu fichiers en %lu requêtes|%lu fichiers en %lu requêtes"/>
+	<string id="8155" value="%lu fichier en %lu accès|%lu fichier en %lu accès|%lu fichiers en %lu accès"/>
 	<string id="8156" value="Rechercher"/>
 	<string id="8157" value="Résultats"/>
 	<string id="8158" value="Vider"/>
 	<string id="8159" value="Avancée"/>
 	<string id="8160" value="Établissement d'une connexion à l'hôte..."/>
-	<string id="8161" value="Requête poussée envoyée, en attente de connexion..."/>
+	<string id="8161" value="Demande poussée envoyée, en attente de connexion..."/>
 	<string id="8162" value="Connecté, demande de navigation..."/>
 	<string id="8163" value="Télécharge la réponse de navigation (%2.f%%)..."/>
 	<string id="8164" value="Incapable de se connecter à l'hôte afin de parcourir l'utilisateur."/>
@@ -2654,7 +2654,7 @@ Other:
 	<string id="16208" value="Réception inattendue d'une mise à jour de table de routage du voisin %s."/>
 	<string id="16209" value="Le voisin %s a envoyé une notification de mise à jour de table de routage invalide, connexion laissée tomber."/>
 	<string id="16210" value="Le voisin %s a mis à jour sa question table de routage (%i bit = %lu[%i], %i%% full)."/>
-	<string id="16211" value="Le voisin %s a fait suivre une requête poussée a une adresse bloquée, ignore."/>
+	<string id="16211" value="Le voisin %s a fait suivre une demande poussée à une adresse derrière un pare-feu, ignore."/>
 	<string id="16212" value="Le voisin %s a fait suivre un paquet étendu qui n'est pas encodé GGEP."/>
 	<string id="16213" value="Envoie une question table de routage au voisin %s (%i bit = %lu[%i], %i%% plein)"/>
 	<string id="16256" value="Ajoute &quot;%s&quot; avec %i source(s) à la liste des téléchargements."/>
@@ -2671,7 +2671,7 @@ Other:
 	<string id="16267" value="Requiert le fragment de téléchargement (%I64i-%I64i) de %s."/>
 	<string id="16268" value="Plus de fragments du téléchargement, fermeture de la connexion avec %s."/>
 	<string id="16269" value="Le fragment a raccourci, fermeture de la connexion avec %s."/>
-	<string id="16270" value="Temps mort pour la requête de téléchargement à %s, fermeture de la connexion."/>
+	<string id="16270" value="Temps mort pour la demande de téléchargement à %s, fermeture de la connexion."/>
 	<string id="16271" value="Fermeture de la connexion de téléchargement avec %s à cause du manque de trafic."/>
 	<string id="16272" value="L'hôte de téléchargement %s n'a pas le fichier &quot;%s&quot;."/>
 	<string id="16273" value="L'hôte de téléchargement %s a répondu avec une réponse HTTP invalide."/>
@@ -2690,7 +2690,7 @@ Other:
 	<string id="16286" value="L'hôte %s pousse le téléchargement &quot;%s&quot;, accepte."/>
 	<string id="16287" value="Ne peut rechercher plus de sources pour le téléchargement de &quot;%s&quot; car il n'y a pas de connexion au réseau."/>
 	<string id="16288" value="Requiert plus de sources pour le téléchargement &quot;%s&quot; sur %i connexion(s)..."/>
-	<string id="16289" value="Envoie une requête poussée pour le téléchargement &quot;%s&quot;..."/>
+	<string id="16289" value="Envoie une demande poussée pour le téléchargement &quot;%s&quot;..."/>
 	<string id="16290" value="L'hôte de téléchargement %s a répondu avec un segment différent mais utile (%I64i-%I64i) de &quot;%s&quot;."/>
 	<string id="16291" value="Déplace &quot;%s&quot; vers &quot;%s&quot;, téléchargement terminé."/>
 	<string id="16292" value="Ne peut déplacer le téléchargement vers &quot;%s&quot;.  Vérifiez que ce fichier n'est pas utilisé et que votre dossier de téléchargement existe et est inscriptible."/>
@@ -2742,7 +2742,7 @@ Other:
 	<string id="16338" value="L'hôte d'envoi %s a demandé un segment insatisfiable du fichier &quot;%s&quot;."/>
 	<string id="16339" value="Envoi de la réponse HTML par défaut à l'hôte d'envoi %s (%s)."/>
 	<string id="16340" value="Refuse la demande de navigation de %s."/>
-	<string id="16341" value="L'hôte d'envoi %s (%s) a envoyé une requête de navigation utilisateur, répond..."/>
+	<string id="16341" value="L'hôte d'envoi %s (%s) a envoyé une demande de navigation utilisateur, répond..."/>
 	<string id="16342" value="Fermeture de la connexion d'envoi %s à cause du manque de trafic."/>
 	<string id="16343" value="Fermeture d'un envoi plus ancien à %s car il a établi une connexion plus récente."/>
 	<string id="16344" value="Refuse un nouvel envoi à %s car une connexion précédente est déjà en suspens."/>
@@ -3372,7 +3372,7 @@ Other:
         <control caption="Nombre de torrents à la fois"/>
         <control/><control/>
         <control caption="Connexions à des clients"/>
-		<control caption="&#160;Nettoyer les torrents téléch.&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;qd le ratio de partage dépasse"/>
+		<control caption="&#160;Nettoyer les torrents téléch.&#160;&#160;&#160;&#160;&#160;qd le ratio de partage dépasse"/>
   	    <control/><control/><control/>
 		<control caption="&#160;Sources torrent de préférence"/>
         <control caption="_EndGame:"/>
