--- a/trunk/Languages/default-chs.xml
+++ b/trunk/Languages/default-chs.xml
@@ -22,7 +22,7 @@
 		description="Shareaza Chinese(Simplified) Skin File"
 		link="http://www.p2pnet.cn/shareaza"
 		email="ShareazaSTC(AT)gmail(DOT)com"
-		version="2.1.1.0"
+		version="2.1.1.3"
 		type="Language"
 		language="chs"
 		prompt="单击这里显示简体中文"
@@ -2502,8 +2502,8 @@
 	<string id="8064" value="连接到 %lu 个邻居。%s 处于本地收藏中。"/>
 	<string id="8065" value="连接网络..."/>
 	<string id="8066" value="尚未连接网络。"/>
-	<string id="8067" value="%s传入 : %s传出 [下载:%i/上传:%i]"/>
-	<string id="8068" value="[活动:%i] %s 传入 : %s 传出 [下载:%i/上传:%i]"/>
+	<string id="8067" value="%s传入:%s传出[下载:%i/上传:%i]"/>
+	<string id="8068" value="[活动:%i]%s传入:%s传出[下载:%i/上传:%i]"/>
 	<string id="8069" value="连接"/>
 	<string id="8070" value="连接中..."/>
 	<string id="8071" value="连接完毕"/>
@@ -2541,7 +2541,7 @@
 	<string id="8152" value="%lu 个集端，%lu 个子端"/>
 	<string id="8153" value="当前未进行搜索"/>
 	<string id="8154" value="没有找到文件"/>
-	<string id="8155" value="%lu 个文件在 %lu 个命中|%lu 个文件在 %lu 个命中|%lu 个文件在 %lu 个命中"/>
+	<string id="8155" value="%lu 个文件共 %lu 次命中|%lu 个文件共 %lu 次命中|%lu 个文件共 %lu 次命中"/>
 	<string id="8156" value="搜索"/>
 	<string id="8157" value="结果"/>
 	<string id="8158" value="清除"/>
@@ -3393,7 +3393,7 @@
 		<control caption="下载..."/>
 	</dialog>
 
-	<dialog name="CBitTorrentSettingsPage" cookie="BuBuBuEdmsStEdmsStBuStEdmsBuBuBuEdBuBuEdBuStEdSt" caption="BitTorrent">
+	<dialog name="CBitTorrentSettingsPage" cookie="BuBuBuEdmsStEdmsStBuEdmsStBuBuBuBuEdBuBuEdBuStEd" caption="BitTorrent">
 		<control caption="界面(_I):"/>
 		<control caption="显示 BitTorrent 额外的界面元素"/>
 		<control caption="下载连接(_D):"/>
@@ -3401,9 +3401,9 @@
 		<control caption="个 Torrents 一次"/>
 		<control/><control/>
 		<control caption="个客户端连接"/>
-		<control caption="清除已下载的 Torrent"/>
-		<control caption="当分享率达到"/>
-		<control/><control/>
+		<control caption="&#160;清除已下载的 Torrent&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;当共享比率达到"/>
+		<control/><control/><control/>
+		<control caption="&#160;Torrent 资源优先"/>
 		<control caption="最终阶段(_E):"/>
 		<control caption="在完成 Torrent 时启用最终阶段模式"/>
 		<control caption="在这里保存 Torrent(_S):"/>
@@ -3411,7 +3411,7 @@
 		<control caption="Torrent 制作工具(_T)"/>
 		<control/><control/>
 		<control caption="默认 Tracker:"/>
-		<control/><control/>
+		<control/>
 	</dialog>
 
 	<dialog name="CProtocolsSettingsPage" cookie="BuSy" caption="协议">
@@ -4094,9 +4094,9 @@
 		<control caption="Torrent 信息(_I):"/>
 		<control caption="名称:"/>
 		<control/>
-		<control caption="创建于:"/>
+		<control caption="创建:"/>
 		<control/>
-		<control caption="由:"/>
+		<control caption="制作:"/>
 		<control/>
 		<control caption="备注:"/>
 		<control/>
