--- a/trunk/Languages/default-heb.xml
+++ b/trunk/Languages/default-heb.xml
@@ -8,7 +8,7 @@
 		description="Shareaza Default Hebrew Skin File"
 		link="http://www.shareaza.com/"
 		email="peer_l_ (at) hotmail (dot) com"
-		version="2.1.0.150"
+		version="2.1.1.11"
 		type="Language"
 		language="heb"
 		prompt="המחדל ברירת כשפת עברית לקביעת כאן לחץ"
@@ -41,6 +41,7 @@
 		<button id="ID_NETWORK_CONNECT" text="‪התחבר"/>
 		<button id="ID_NETWORK_DISCONNECT"/>
 		<separator/>
+		<button id="ID_TAB_HOME"/>
 		<button id="ID_VIEW_SYSTEM"/>
 		<button id="ID_VIEW_NEIGHBOURS"/>
 		<button id="ID_VIEW_DOWNLOADS"/>
@@ -1445,11 +1446,11 @@
 	    <para align="left">
 		<styles>
 			<style name="default">
-				<font face="Verdana" size="14"/>
+				<font face="Arial" size="17"/>
 				<colours text="‪000000" link="0000FF" hover="FF0000"/>
 			</style>
 			<style name="heading">
-				<font face="Tahoma" size="16" weight="800"/>
+				<font face="Arial" size="17" weight="800"/>
 				<colours text="‪800000"/>
 			</style>
 		</styles>
@@ -2089,6 +2090,21 @@
 		services window.</text>
 	</document>
 
+	<document name="GeneralHelp.UploadWarning">
+		<text format="b">Limiting uploads may slow downloads</text>
+		<newline gap="8"/>
+		<text>Several networks Shareaza connects to enforce ratios, limit uploads to
+		clients that do not share, or simply preference uploading to known sharers.</text>
+		<newline/>
+		<text>Fortunately, broadband DSL connections are like a two-lane highway: you have
+		separate allocations for upload and download. If your client is properly configured, 
+		you should be able to upload at a good rate while retaining full download capacity.</text>
+		<newline gap="8"/>
+		<text>By default, your upload limit is set to about 85% of available upstream bandwidth,
+		while downloads are unlimited. That configuration should give you the fastest possible 
+		downloads that are available.</text>
+	</document>
+
 	<!-- Search help documents -->
 
 	<document name="SearchHelp.BadSearch1">
@@ -2498,6 +2514,8 @@
 	<string id="7001" value="‪‪&amp;סכמות"/>
 	<string id="7002" value="‪‪ערכים כפולים"/>
 	<string id="7003" value="‪‪כפוך"/>
+	<string id="7004" value="There already is a filter called &quot;%s&quot;, do you want to replace it?"/>
+	<string id="7005" value="Please give your filter a name."/>
 	<string id="8000" value="‪‪הגדרות שרזה"/>
 	<string id="8001" value="‪ברוכים הבאים לשרזה"/>
 	<string id="8002" value="‪מאפייני קובץ"/>
@@ -2907,13 +2925,14 @@
 	<string id="16803" value="‪The folder you are sharing is already shared as part of another shared folder:\n\n%s"/>
 	<string id="16804" value="‪You haven't entered a screen name in your user profile.\n\nIt's a good idea to enter a custom screen name so that other users can see who they're connected to.\n\nAre you sure you want to continue without a screen name?"/>
 	<string id="16805" value="‪You haven't entered your location in your user profile.\n\nIt's a good idea to enter your location so that other users can see where you're from.\n\nAre you sure you want to continue without entering your location?"/>
-	<string id="16806" value="‪You have indicated that you want to set up port-forwarding on your NAT router or firewall.\n\nPlease configure your network to forward TCP port %i to your local PC."/>
+	<string id="16806" value="You have indicated that you want to set up port-forwarding on your NAT router or firewall.\n\nPlease configure your network to forward TCP and UDP ports %i to your local PC."/>
 	<string id="16807" value="‪Please type the bandwidth limit you wish to set in the form &quot;123 kb/s&quot; for kilobits per second, or &quot;123 KB/s&quot; for kilobytes per second."/>
 	<string id="16808" value="‪?לא בחרת גיל ומין, אתה בטוח שאתה רוצה להמשיך"/>
 	<string id="16809" value="‪י&amp;ציאה"/>
 	<string id="16810" value="‪בגיל"/>
 	<string id="16811" value="‪אוטומטי"/>
 	<string id="16816" value="‪The eDonkey network uses large queues with long wait times. By limiting the maximum queue position you will accept so strictly, you may have trouble getting downloads to begin.\nAre you sure you want to limit what queue positions you will accept?"/>
+	<string id="16817" value="Windows doesn't support filepaths longer than 256 chracters.\nPlease select a folder with a shorter path."/>
 	<string id="16864" value="‪Querying host discovery services..."/>
 	<string id="16865" value="‪Querying discovery service &quot;%s&quot;..."/>
 	<string id="16866" value="‪GWebCache transaction successful (&quot;%s&quot;)."/>
@@ -3036,7 +3055,6 @@
 	<string id="17477" value="‪BitTorrent coupling with %s responded with the wrong file."/>
 	<string id="17478" value="‪BitTorrent coupling with %s requested an unknown file."/>
 	<string id="17479" value="‪BitTorrent coupling with %s established for &quot;%s&quot;."/>
-	<string id="17480" value="‪BitTorrent coupling with %s was lost."/>
 	<string id="17481" value="‪Received BitTorrent descriptor file: &quot;%s&quot;"/>
 	<string id="17482" value="‪Unable to parse prefetched BitTorrent file &quot;%s&quot;."/>
 	<string id="17483" value="‪Error from BitTorrent tracker for &quot;%s&quot; : &quot;%s&quot;."/>
@@ -3055,6 +3073,8 @@
 	<string id="17496" value="‪An error occurred while copying from &quot;%s&quot; to a BitTorrent share file."/>
 	<string id="17497" value="‪An unknown error occurred while trying to seed &quot;%s&quot;."/>
 	<string id="17498" value="‪An error was detected in the file &quot;%s&quot;."/>
+	<string id="17500" value="Tracker did not respond- Retrying announce (%i of %i)"/>
+	<string id="17501" value="Unable to communicate with tracker"/>
 	<string id="18496" value="‪You have made changes to the name field.  Are you sure you want to rename this download?"/>
 	<string id="18497" value="‪You have typed a SHA1 value, however it is invalid.  Please check it and try again."/>
 	<string id="18498" value="‪You have typed a root tiger-tree value, however it is invalid.  Please check it and try again."/>
@@ -3075,6 +3095,8 @@
 	<string id="19002" value="‪לא מצליח לקבל התקשרויות, כתובת האינטרנט לא זמינה"/>
 	<string id="20000" value="‪זמין URN אין"/>
 	<string id="20002" value="‪מתוך"/><!-- e.g. 1 of 10 -->
+	<string id="20003" value="Changing interface direction requires restart. \nYou will need to start Shareaza manually. Exit now?"/>
+	<string id="20004" value="Right-to-left languages are not supported in your OS."/>
 	<string id="20100" value="‪מתחבר"/>
 	<string id="20101" value="‪מבקש"/>
 	<string id="20102" value="‪תגובה"/>
@@ -3416,10 +3438,9 @@
 	<control caption="טורנטים בו זמנית"/>
 	<control/><control/>
 	<control caption="מקסימום חיבורים"/>
-	<control caption=":נקה הורדות של טורנטים כשיחס השיתוף מגיע לרמה זו."/>
-	<control/><control/>
-	<control caption="%"/>
-	<control caption="עדיפות למקורות של ביט-טורנט"/>
+	<control caption="&#160;נקה טורנטים שהורדו&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;כשרמת השיתוף תגיע אל"/>
+	<control/><control/><control/>
+	<control caption="&#160;תן עדיפות למקורות של טורנטים"/>
 	<control caption=":EndGame (האצה)"/>
 	<control caption="כשמסיימים הורדת טורנטים EndGame אפשר אופציית"/>
 	<control caption=":אכסן טורנטים כאן"/>
